[package]
name = "brd"
version = "0.1.0"
authors = ["Simon Bruder <simon@sbruder.de>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.31"
byteorder = "^1.3.4"
clap = "3.0.0-beta.1"
log = "^0.4.8"
num-derive = "^0.3"
num-traits = "^0.2"
pretty_env_logger = "^0.4"
thiserror = "^1.0.20"
zip = { version = "^0.5.5", default-features = false, features = ["deflate"] }
