[package]
name = "brd"
version = "0.1.0"
authors = ["Simon Bruder <simon@sbruder.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.4"
clap = "3.0.0-beta.1"
derive_builder = "0.9"
derive_more = "0.99.9"
konami-lz77 = { git = "https://github.com/sbruder/konami-lz77" }
log = "0.4.8"
num-derive = "0.3"
num-traits = "0.2"
pbr = "1.0.3"
pretty_env_logger = "0.4"
quick-xml = { version = "0.18", features = [ "serialize" ] }
rayon = "1"
serde = { version = "1.0", features = [ "derive" ] }
tabwriter = "1.2.1"
thiserror = "1.0.20"
zip = { version = "0.5.5", default-features = false, features = ["deflate"] }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
